k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ayunet-backend-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: ayunet-backend
